Update charybdis_right.conf w/ bugfixes

--- a/boards/shields/charybdis-bt/charybdis_right.conf
+++ b/boards/shields/charybdis-bt/charybdis_right.conf
@@ -17,11 +17,13 @@ CONFIG_PMW3610_INIT_POWER_UP_EXTRA_DELAY_MS=1000
 
 # Enable the logging subsystem
 CONFIG_LOG=y
+CONFIG_UART_CONSOLE=y
+
 # Set the overall log level (higher number means more detail)
 # DEBUG (4) provides the most detailed output, good for troubleshooting.
 # INFO (3) might be sufficient, but DEBUG is better for this issue.
 # WARNING (2) and ERROR (1) are less verbose.
-CONFIG_LOG_MAX_LEVEL=4 # Or CONFIG_LOG_MAX_LEVEL=3 for INFO
+CONFIG_LOG_MAX_LEVEL=4 
 
 # Enable UART as a logging backend
 CONFIG_LOG_BACKEND_UART=y
@@ -31,4 +33,4 @@ CONFIG_LOG_BACKEND_UART=y
 # Look for options related to PMW3610 logging in the driver's Kconfig file if DEBUG level isn't enough.
 # A common option might look like this:
 CONFIG_PMW3610_LOG_LEVEL_DBG=y
-CONFIG_ZMK_POINTING_LOG_LEVEL_DBG=y # This enables generic pointing device debug logs
+CONFIG_ZMK_POINTING_LOG_LEVEL_DBG=y 
